Add the basic page structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,72 @@
     <title>Sign-up Form</title>
 </head>
 <body>
-    
+    <div class="main">
+
+        <div class="left">
+
+            <div class="logo">
+                <img src="assets/images/odin-lined.png" alt="Odin logo">
+                <span>Odin</span>
+            </div>
+
+            <p>Photo by 
+                <a href="https://unsplash.com/pt-br/@haliewestphoto" target="_blank" rel="noopener noreferrer">Halie West</a> 
+                on 
+                <a href="https://unsplash.com/pt-br/fotografias/planta-da-folha-verde-na-fotografia-de-perto-25xggax4bSA" target="_blank" rel="noopener noreferrer">unplash</a>
+            </p>
+
+        </div>
+
+        <div class="right">
+
+            <div class="paragraphs">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+                <p>Sign up now to get started.</p>
+                <p>You know you want to.</p>
+            </div>
+
+            <form action="" method="">
+
+                <h1>Let's do this!</h1>
+
+                <div class="name">
+                    <div class="first-name">
+                        <label for="firstname">First Name</label>
+                        <input type="text" name="firstname" id="firstname">
+                    </div>
+                    <div class="last-name">
+                        <label for="lastname">Last Name</label>
+                        <input type="text" name="lastname" id="lastname">
+                    </div>
+                </div>
+                
+                <div class="contact">
+                    <div class="email">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="phone-number">
+                        <label for="phonenumber">Phone Number</label>
+                        <input type="tel" name="phonenumber" id="phonenumber">
+                    </div>
+                </div>
+
+                <div class="security">
+                    <div class="password">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password">
+                    </div>
+                    <div class="confirm-password">
+                        <label for="confirmpassword">Confirm Password</label>
+                        <input type="password" name="confirmpassword" id="confirmpassword">
+                    </div>
+                </div>
+
+            </form>
+
+        </div>
+
+    </div>
 </body>
 </html>
