--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                         <input type="password" name="confirmpassword" id="confirmpassword">
                     </div>
                 </div>
+                
+                <button type="submit">Create Account</button>
+
+                <p>Already have an account? <a href="#">login</a></p>
 
             </form>
 
